TAG: qcreports_db-6-0-23-7
TAG: qcreports_db-6-0-23-6
DATE: 03/11/2024
STAFF: lec
wts2-1429/fl2-777/re-add weekly/BIB_Duplicates.sql

TAG: qcreports_db-6-0-23-5
TAG: qcreports_db-6-0-23-4
DATE: 03/1/2024
STAFF: lec
wts2-1419/fl2-761/Alicia Valenzuela QC, etc.
wts2-1421/obsolete QC reports
#       deleted:    mgd/PRB_Strain5.py
#       deleted:    mgd/PRB_Strain6.py
#       deleted:    mgd/PRB_StrainDup.sql
#       deleted:    mgd/PRB_StrainTrans.sql
#       deleted:    mgd/PRB_Strain_MultNoAlleles.sql
#       deleted:    mgd/PRB_Strain_NoAlleles1.sql
#       deleted:    mgd/PRB_Strain_NomenSyns.py
#       deleted:    mgd/PRB_Strain_OtherSyns.py
#       deleted:    mgd/PRB_Strain_SingleNoAlleles1.sql
#       deleted:    mgd/PRB_Strain_SingleNoAlleles2.sql
#       deleted:    mgd/PRB_Strain_Standard.sql
#       deleted:    weekly/BIB_Duplicates.sql
#       deleted:    weekly/GO_CurationMetrics.sql
#       deleted:    monthly/BIB_Dagger.sql

TAG: qcreports_db-6-0-23-3
DATE: 02/27/2024
STAFF: lec
wts2-1412/fl2-758/retire WF_GXD_secondary.rpt QC
#       deleted:    weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-23-2
DATE: 02/01/2024
STAFF: lec
wts2-1382/fl2-717/add relevance
wts2-1381/fl2-721/New QC report: New PubMed2Gene References for markers with no literature MP annot.
#       new file:   mgd/ALL_PM2GeneNoMP.py
#       modified:   mgd/GO_PM2GeneRefsNotInMGI.py

TAG: qcreports_db-6-0-23-1
DATE: 01/31/2024
STAFF: lec
#       modified:   mgd/VOC_InvalidProperties.py
fix bug

TAG: qcreports_db-6-0-22-76
DATE: 01/30/2024
STAFF: lec
wts2-1390/fl2-712/Custom report for batch allele retrieval
(qcreports/pwi/ALL_CheckByCreationDate.py)

TAG: qcreports_db-6-0-22-75
DATE: 12/05/2023
STAFF: sc
New report: weekly/HOM_MouseNoHuman.py

TAG: qcreports_db-6-0-22-74
DATE: 11/30/2023
STAFF: dbm
qcr.shtml: remove link to arrayexpload (retired)

TAG: qcreports_db-6-0-22-73
DATE: 11/28/2023
STAFF: lec
wts2-1343/fl2-653/Custom GXD report for highlight

TAG: qcreports_db-6-0-22-72