@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-23-8
+DATE: 03/12/2024
+STAFF: lec
+wts2-1430/fl2-778/add column to existing GXD_HTOverview
+
 TAG: qcreports_db-6-0-23-7
 TAG: qcreports_db-6-0-23-6
 DATE: 03/11/2024
